[gd_scene load_steps=5 format=3 uid="uid://bhf7o3ovjlegw"]

[ext_resource type="Script" uid="uid://dacw8q67ghy5b" path="res://components/code_wheel/code_wheel.gd" id="1_3qla8"]
[ext_resource type="Texture2D" uid="uid://b1jcq1opggshh" path="res://components/code_wheel/stone-texture.jpg" id="1_yeqvx"]
[ext_resource type="PackedScene" uid="uid://dhcdot5twa1ke" path="res://components/code_wheel/single_wheel.tscn" id="2_3qla8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_37xkc"]
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="CodeWheel" type="MarginContainer"]
script = ExtResource("1_3qla8")
value = "301"

[node name="PanelContainer" type="PanelContainer" parent="."]
clip_children = 1
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_37xkc")

[node name="TextureRect" type="TextureRect" parent="PanelContainer"]
layout_mode = 2
texture = ExtResource("1_yeqvx")
expand_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 50

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="Wheel1" parent="MarginContainer/HBoxContainer" instance=ExtResource("2_3qla8")]
unique_name_in_owner = true
layout_mode = 2
value = 3

[node name="Wheel2" parent="MarginContainer/HBoxContainer" instance=ExtResource("2_3qla8")]
unique_name_in_owner = true
layout_mode = 2

[node name="Wheel3" parent="MarginContainer/HBoxContainer" instance=ExtResource("2_3qla8")]
unique_name_in_owner = true
layout_mode = 2
value = 1
